Create new darcy module
This is the first commit implementing the basic functionality for
a new Darcy module aiming to solve the Darcy equation for flow
in porous media.

This basic functionality means:
- steady-state problem,
- constant scalar coefficients (porosity and permeability),
- coupled system with no preconditioning,
- DG space discretization and matrix-free implementation,
- Heavy analogy to and use of IncNS functionality,
- No postprocessing (only solution output).

Also a simple application example is included.

This state of the code still requires refactoring and restyling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,6 +189,11 @@ SET(TARGET_SRC
      include/exadg/structure/driver.cpp
      # fluid-structure-interaction
      include/exadg/fluid_structure_interaction/driver.cpp
+     # darcy
+     include/exadg/darcy/postprocessor/postprocessor.cpp
+     include/exadg/darcy/spatial_discretization/operator_coupled.cpp
+     include/exadg/darcy/time_integration/driver_steady_problems.cpp
+     include/exadg/darcy/driver.cpp
      )
 
 SET(DEAL_II_HAVE_TESTS_DIRECTORY TRUE)
