Implement own parameter interface
With this commit, the Darcy module gets its own parameter interface
since the IncNS parameters were overloaded with many things that
Darcy does not require. Also, a tree-like parameters structure is
implemented for a nice grouping of the parameters in terms of
nested structs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -197,6 +197,8 @@ SET(TARGET_SRC
      include/exadg/darcy/spatial_discretization/operators/momentum_operator.cpp
      include/exadg/darcy/time_integration/driver_steady_problems.cpp
      include/exadg/darcy/time_integration/time_int_bdf_coupled.cpp
+     include/exadg/darcy/user_interface/enum_types.cpp
+     include/exadg/darcy/user_interface/parameters.cpp
      include/exadg/darcy/driver.cpp
      )
 
