Add test for the cellwise inverse mass matrix with coupl. var. coeff.
Only works with own implementation of the new cellwise inverse mass matrix with coupling (tensor-valued) variable coefficient in deal.II

--- a/tests/operators_gtest/CMakeLists.txt
+++ b/tests/operators_gtest/CMakeLists.txt
@@ -30,6 +30,7 @@ TARGETNAME(TARGET_NAME ${CMAKE_CURRENT_SOURCE_DIR})
 ADD_EXECUTABLE(
     ${TARGET_NAME}
     variable_coefficients.cc
+    coupled_inverse_mass_operator.cc
 )
 
 DEAL_II_SETUP_TARGET(${TARGET_NAME})
